# markdown-code-runner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docs_gen.py  markdown_code_runner.py  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  markdown-code-runner.yml  pytest.yml  pythonpublish.yml
docs/: CNAME  DEVELOPER_NOTES.md  contributing.md  docs_gen.py  examples.md  getting-started.md  index.md  run_markdown_code_runner.py
docs/overrides/partials/integrations/analytics/: custom.html
docs/usage/: cli.md  github-actions.md  python-api.md
tests/: __init__.py  test.md  test_app.py  test_backtick_stdz.md  test_backtick_stdz.py  test_backtick_stdz_expected_output.md  test_expected_output.md  test_main_app.md  test_main_app.py  test_main_app_expected_output.md
