[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-code-runner"
description = "Automatically execute code blocks within a Markdown file and update the output in-place"
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
dependencies = [
    "typing-extensions; python_version < '3.8'",
]
requires-python = ">=3.7"
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/basnijholt/markdown-code-runner"

[project.optional-dependencies]
test = ["pytest", "pre-commit", "coverage", "pytest-cov"]

[project.scripts]
markdown-code-runner = "markdown_code_runner:main"

[tool.setuptools]
py-modules = ["markdown_code_runner"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = """
    --cov=markdown_code_runner
    --cov-report term
    --cov-report html
    --cov-fail-under=100
"""

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line_length = 88

[tool.ruff]
line-length = 150
target-version = "py37"
select = ["ALL"]
ignore = [
    "T20",     # flake8-print
    "ANN101",  # Missing type annotation for {name} in method
    "S101",    # Use of assert detected
    "PD901",   # df is a bad variable name. Be kinder to your future self.
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "D402",    # First line should not be the function's signature
    "PLW0603", # Using the global statement to update `X` is discouraged
    "D401",    # First line of docstring should be in imperative mood
]

[tool.ruff.per-file-ignores]
"tests/*" = ["SLF001"]
"ci/*" = ["INP001"]
"tests/test_examples.py" = ["E501"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.7"
